fix display modal on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,8 +25,14 @@ body {
   opacity: 1 !important;
 }
 
+/* avoid zoom in behavior in mobile */
 input[type='email'],
 input[type='text'],
 input[type='password'] {
   font-size: 16px;
+}
+
+/* fix list color on old mobile browser */
+ul[data-slot='listbox'] li span {
+  color: #000;
 }
